# gitlab-mcp-swift

./: .gitignore  CLAUDE.md  LICENSE  Package.swift  README.md  USAGE_GUIDE.md  gitlab_mcp_swift_setup.md  install.sh  mcp.json.example  mypy.ini  package-lock.json  pyproject.toml  run_server.py
.claude/: settings.local.json
docs/: SWIFT_REFACTOR_SUMMARY.md
gitlab-mcp-swift/: CHANGELOG.md  LICENSE  MCP_INSTRUCTIONS.md  Package.swift  README.md  test_server.sh
gitlab-mcp-swift/Sources/GitLabMCP/: GitLabCLI.swift  GitLabMCPCommand.swift  GitLabMCPServer.swift  main.swift
gitlab-mcp-swift/Sources/GitLabMCP/Models/: GitLabCommand.swift
src/glab_mcp/: __init__.py  __main__.py  server.py
